--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://192.168.99.100:5432/postgresdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgresdb
 spring.datasource.username= postgres
 spring.datasource.password=postgres
 
